--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -2,7 +2,7 @@ name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
   workflow_dispatch: # enable manual workflow execution
 
 # Set permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
