--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ name: test
 
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths:
       [
         "src/**/*.*",
@@ -14,7 +14,7 @@ on:
         "setup.py",
       ]
   pull_request:
-    branches: [master]
+    branches: [main]
     paths:
       [
         "src/**/*.*",
