--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,8 @@ dependencies = [
     "spglib>=2.5",
     "sympy>=1.3", # PR #4116
     "uncertainties>=3.1",
+    "plotly>=6.0",
+    "joblib>=1.3.2",
 ]
 version = "2025.10.7"
 
