--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ dependencies = [
     "uncertainties>=3.1",
     "plotly>=6.0",
     "joblib>=1.3.2",
+    "bibtexparser"
 ]
 version = "2025.10.7"
 
