--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,8 @@ dependencies = [
     "uncertainties>=3.1",
     "plotly>=6.0",
     "joblib>=1.3.2",
-    "bibtexparser"
+    "bibtexparser",
+    "tabulate>=0.9.0",
 ]
 version = "2025.10.7"
 
