--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ dependencies = [
     "joblib>=1.3.2",
     "bibtexparser",
     "tabulate>=0.9.0",
+    "tqdm>=4.67.3",
 ]
 version = "2025.10.7"
 
