Fix missing data files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,12 +113,11 @@ include = ["pymatgen", "pymatgen.*"]
 
 [tool.setuptools.package-data]
 "pymatgen.entries" = ["*.json.gz", "*.yaml", "data/*.json"]
-"pymatgen.core" = ["*.json", "*.json.gz"]
+"pymatgen.core" = ["*.json", "*.json.gz", "*.yaml", "data/*.json"]
 "pymatgen" = ["py.typed"]
 "pymatgen.io.vasp" = ["*.json", "*.json.bz2", "*.json.gz", "*.yaml"]
 "pymatgen.io.feff" = ["*.yaml"]
 "pymatgen.io.cp2k" = ["*.yaml"]
-"pymatgen.io.lobster" = ["lobster_basis/*.yaml"]
 "pymatgen.command_line" = ["*"]
 "pymatgen.util" = ["*.json", "structures/*.json"]
 "pymatgen.io.lammps" = ["CoeffsDataType.yaml", "templates/*.template"]
