--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,9 +102,10 @@ matcalc = [
 mlp = ["matgl>=2.0.4 ; python_version<'3.13'"]
 numba = ["numba>=0.55"]
 optional = [
-    "pymatgen[abinit,ase,matcalc,mlp,tblite,zeopp]",
+    "netcdf4>=1.7.2",
+    "ase>=3.23.0",
     "beautifulsoup4",
-    "pymatgen-analysis-alloys",
+    #"pymatgen-analysis-alloys",
     # PR4347: BoltzTraP2 needs to bump cmake version for spglib build
     # "BoltzTraP2>=24.9.4",
     "chemview>=0.6",
@@ -114,10 +115,11 @@ optional = [
     "hiphive>=1.3.1",
     "phonopy>=2.33.3",
     "seekpath>=2.0.1",
+    "tblite[ase]>=0.3.0; platform_system=='Linux' and python_version<'3.12'"
 ]
 prototypes = ["pyxtal>=1.0", "pymatgen[symmetry]"]
 # moyopy[interface] includes ase
-symmetry = ["moyopy[interface]>=0.3", "spglib>=2.5"]
+symmetry = ["moyopy[interface]>=0.3"]
 # tblite only support Python 3.12+ through conda-forge
 # https://github.com/tblite/tblite/issues/175
 tblite = ["tblite[ase]>=0.3.0; platform_system=='Linux' and python_version<'3.12'"]
