--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,19 +47,18 @@ jobs:
           - os: windows-latest
             python: "3.11"  # Test lowest supported Python version
             resolution: lowest-direct
-            extras: optional,prototypes
+            extras: optional
           - os: windows-latest
             python: "3.11"
             resolution: highest
-            extras: prototypes,optional,numpy-v1 # Test NP1 on Windows (quite buggy ATM)
+            extras: optional,numpy-v1 # Test NP1 on Windows (quite buggy ATM)
           - os: macos-latest
             python: "3.13"
             resolution: lowest-direct
-            extras: prototypes # test with only required dependencies installed
           - os: ubuntu-latest
             python: "3.14"  # Test highest supported Python version
             resolution: highest
-            extras: prototypes,optional
+            extras: optional
 
     runs-on: ${{ matrix.config.os }}
     env:
