--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/pymatgen
+      url: https://pypi.org/p/pymatgen-core
     permissions:
       # For PyPI trusted publishing
       id-token: write
