Use 3.13 for Windows test.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,12 +45,16 @@ jobs:
         # newest version on Ubuntu (to get complete coverage).
         config:
           - os: windows-latest
-            python: "3.11"  # Test lowest supported Python version
+            python: "3.13"  # Test lowest supported Python version
             resolution: lowest-direct
             extras: optional
           - os: macos-latest
             python: "3.13"
             resolution: lowest-direct
+          - os: ubuntu-latest
+            python: "3.11"  # Test highest supported Python version
+            resolution: lowest-direct
+            extras: optional
           - os: ubuntu-latest
             python: "3.14"  # Test highest supported Python version
             resolution: highest
