Fix missing data files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,8 +134,7 @@ where = ["src"]
 include = ["pymatgen", "pymatgen.*"]
 
 [tool.setuptools.package-data]
-"pymatgen.entries" = ["*.json.gz", "*.yaml", "data/*.json"]
-"pymatgen.core" = ["*.json", "*.json.gz", "*.yaml", "data/*.json"]
+"pymatgen.core" = ["*.json", "*.json.gz", "*.yaml", "data/*.json", "structure_prediction/data/*.json", "structure_prediction/*.yaml"]
 "pymatgen" = ["py.typed"]
 "pymatgen.io.vasp" = ["*.json", "*.json.bz2", "*.json.gz", "*.yaml"]
 "pymatgen.io.feff" = ["*.yaml"]
