--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,7 +116,7 @@ jobs:
         run: |
           pytest --cov=pymatgen --cov-report=xml tests --color=yes
       - name: Codecov
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && matrix.config.os == 'ubuntu-latest' && matrix.config.python == '3.11'
         uses: codecov/codecov-action@v5
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
